--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>Recipe Box</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  <title>Game Of Life</title>
 </head>
 
-<div class='btn-div'><button id='load'>Reload</button></div>
 <section id='main'></section>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
-<script src="https://unpkg.com/most/dist/most.js"></script>
+<!-- <script src="https://unpkg.com/most/dist/most.js"></script> -->
 <script src="index.js"></script>
 
 </body>
