added sliding nav

--- a/README.html
+++ b/README.html
@@ -4,7 +4,7 @@
         <title>README.md</title>
       </head>
       <body>
-        <h1 id="game-of-life">game-of-life</h1>
+        <h1 id="game-of-life-game-of-life-react-js-">game-of-life&quot;# game-of-life-react-js&quot;</h1>
 
       </body>
     </html>
