--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <title>Recipe Box</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css.map">
+  <!-- <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css.map"> -->
   <link rel="stylesheet" href="styles.css">
+  <script src="https://use.fontawesome.com/0eeb42b35b.js"></script>
   <title>Game Of Life</title>
 </head>
 
-<nav></nav>
+<nav id='nav'></nav>
 <button id='navOnOff'><i class="fa fa-bars" aria-hidden="true"></i></button>
 <section id='main'></section>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
-<!-- <script src="https://unpkg.com/most/dist/most.js"></script> -->
 <script src="index.js"></script>
 
 </body>
