--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <title>Recipe Box</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="styleSheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css.map"> -->
   <link rel="stylesheet" href="styles.css">
   <script src="https://use.fontawesome.com/0eeb42b35b.js"></script>
   <title>Game Of Life</title>
 </head>
 
-<nav id='nav'></nav>
+<!-- <nav id='nav'></nav> -->
 <button id='navOnOff'><i class="fa fa-bars" aria-hidden="true"></i></button>
 <section id='main'></section>
 
